--- a/index.html
+++ b/index.html
@@ -382,6 +382,14 @@
                 <span id="currentDate"></span>
             </div>
         </div>
+    <!-- Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=GA_MEASUREMENT_ID"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+      gtag('config', 'GA_MEASUREMENT_ID');
+    </script>
     </header>
 
     <!-- Main Content -->
